[project]
name = "starlette_testclient_bug"
version = "0.1.0"
description = ""
authors = [
    { name = "iTitus", email = "iTitus@users.noreply.github.com" }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "starlette (>=0.46.1,<0.47.0)",
    "uvicorn (>=0.34.0,<0.35.0)"
]

[tool.poetry]
packages = [{ include = "starlette_testclient_bug", from = "src" }]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
